--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,12 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=****@gmail.com
+spring.mail.username=*****@gmail.com
 spring.mail.password=****
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-spring.rabbitmq.addresses= amqps://osnwpy**:tiBjct0e95fcxJIlB5PGd4uMVpm_****@toad.rmq.cloudamqp.com/*****
+spring.rabbitmq.addresses= amqps://osnw***:tiBjct0e95fcxJIlB5PGd4uMVpm_HxWq@toad.rmq.cloudamqp.com/***
 spring.rabbitmq.queue=ms.email
+
+logging.level.com.ms.email = INFO
